[package]
name = "sys-updater"
version = "0.1.0"
edition = "2024"
authors = ["StudiCraft"]
description = "A system updater for Arch-based systems."
license = "Apache-2.0"
repository = "https://github.com/StudiCraft/sys-updater"

[dependencies]
sysinfo = "0.39.2"
log = "0.4.30"
env_logger = "0.11.10"
